[package]
name = "runner"
version = "0.1.0"
edition = "2018"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
indexmap = { version = "1.7.0", features = ["serde"] }
log = "0.4.14"
serde = "1.0.127"
serde_derive = "1.0.127"
simplelog = "0.10.0"
toml = { version = "0.5.8", features = ["preserve_order"]}
